wescamp.py: Update from add-on server

--- a/For_Power/scenarios/07_Searching_The_Mage.cfg
+++ b/For_Power/scenarios/07_Searching_The_Mage.cfg
@@ -138,19 +138,19 @@
     name=start
     [message]
 		  speaker=Tinry
-		  message=_"So this the river Arkan Thoria. Do you really want to go across it?"
+		  message=_"This river’s called Arkan Thoria. You sure you want ta cross it?"
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"Yes. He lives in the Heart Mountains."
+		  message=_"It is the only way to reach the mage. He abides in the Heart Mountains."
 		[/message]
 		[message]
 		  speaker=Tinry
-		  message=_"I heard about one mage who lives there. I think he isn't a really good guy."
+		  message=_"I don’t know ‘bout this. I only heard of one mage from the Heart Mountains, and he ain't a good guy."
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"Is it you who is saying such a thing?"
+		  message=_"Oh, so you are complaining about people not being “good guys”. That’s rich, coming from a footpad, of all people."
 		[/message]
 		[message]
 		  speaker=Tinry
@@ -158,16 +158,16 @@
 		[/message]
 		[message]
 		  speaker=Tinry
-		  message=_"By the way there are some orcs in this region. But if you will follow the road you shouldn't meet them."
+		  message=_"I heard there’s some Orcs that lurk about ‘round here. But if we stick to the road they probably won’t bother us."
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"Ok. Let us go."
+		  message=_"Very well. Let us press onwards."
 		[/message]
 		[message]
 		  speaker=narrator
 		  image=wesnoth-icon.png
-		  message=_"You recieved some gold so you can recruit some footpads and thieves to protect you and expolore the land. You can also recall the ones from previous scenario."
+		  message=_"You can now recruit footpads and thieves, to protect Clare and Tinry and to explore the scenario. You may also recall the ones from the previous scenario."
 		[/message]
     [gold]
       side=1
@@ -201,55 +201,55 @@
     [/unit]
     [message]
 		  speaker=Merissa
-		  message=_"Hi, Tinry. What are you doing here?"
+		  message=_"Hey there, Tinry. What you doing ‘round here?"
 		[/message]
 		[message]
 		  speaker=Tinry
-		  message=_"I accompany this lady to the Heart Mountains, Merissa."
+		  message=_"Oh, hi, Merissa! I'm with this lady ‘ere. We're going to the Heart Mountains."
 		[/message]
 		[message]
 		  speaker=Merissa
-		  message=_"Lady? She doesn't look like a noble. She looks rather like a mage."
+		  message=_"She doesn't look like a noble lady to me. She looks like a mage."
 		[/message]
 		[message]
 		  speaker=Tinry
-		  message=_"Yes but her behaviour isn't like ours."
+		  message=_"Well, yeah, but she doesn't talk nor act like us."
 		[/message]
 		[message]
 		  speaker=Merissa
-		  message=_"Whatever. By the way why do you want to go to the Heart Mountains, maiden?"
+		  message=_"Whatever. By the way why do you want to go to the Heart Mountains, girl?"
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"I am looking for a mage. Some orc assassinated our village's sergant."
+		  message=_"I am searching for a mage. A vile Orc slew my village's Sergeant, a friend of mine, and the mage can help me avenge him."
 		[/message]
 		[message]
 		  speaker=Merissa
-		  message=_"All orcs are the same. But this mage..."
+		  message=_"Orcs are all the same, so cruel. But, the mage you looking for, he ain't..."
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"is not a really good guy? Yes, Tinry gave me a warning."
+		  message=_"a really good guy? Yes, Tinry already told me that much."
 		[/message]
 		[message]
 		  speaker=Merissa
-		  message=_"As you think. What is your name?"
+		  message=_"Ah, right. What's your name, anyways?"
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"Clare."
+		  message=_"Clare. I am not keen on being called Lady."
 		[/message]
 		[message]
 		  speaker=Merissa
-		  message=_"Nice to meet you, Clare. I can accompany you if you want. I know this region very well."
+		  message=_"Ok. Well, if you want, I can join you. I know the region well, so I can be a good helper."
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"You are welcome."
+		  message=_"Thank you, you are most welcome to join my party."
 		[/message]
 		[message]
 		  speaker=Merissa
-		  message=_"So this mage ... Go straight on this road to this mountain."
+		  message=_"So, the mage. There's a shortcut, if you want it. Go down this road, straight to the mountain."
 		[/message]
 		[lift_fog]
 		  [filter_side]
@@ -264,11 +264,11 @@
 		[/scroll_to]
 		[message]
 		  speaker=Clare
-		  message=_"Thank you."
+		  message=_"I was planning a far longer path. Thank you for saving me the hike."
 		[/message]
 		[message]
 		  speaker=Merissa
-		  message=_"You are welcome. And one thing I heard someone saw some monsters in the river. I never saw them but be careful."
+		  message=_"You’re welcome, la- Clare. And one thing I heard someone saw some monsters in the river. I never saw them but be careful."
 		[/message]
     {TENTACLE 9 11}
     {TENTACLE 11 11}
@@ -291,7 +291,7 @@
     [/filter]
     [message]
       speaker=unit
-      message= _ "I can feel some magic here."
+      message= _ "I can feel the remnants of magic in the air. We have arrived."
     [/message]
     [endlevel]
 		  result=victory
@@ -303,8 +303,12 @@
   [event]
     name=time over
     [message]
+		  speaker=Tinry
+		  message=_"There goes the last of our water."
+		[/message]
+    [message]
 		  speaker=Clare
-		  message=_"No. I will never find him and Glacyn remain unavenged!"
+		  message=_"All the water in these mountains is infectious, so I suppose... This is it. We are doomed."
 		[/message]
   [/event]
   
