--- a/For_Power/units/Lemyr_Lich.cfg
+++ b/For_Power/units/Lemyr_Lich.cfg
@@ -1,11 +1,40 @@
 #textdomain wesnoth-For_Power
 
+#ifver WESNOTH_VERSION >= 1.11.5
+#define PALADINS_BASEFRAME
+  image="units/human-loyalists/paladin/paladin.png"
+#enddef
+#define PALADINS_MOVING_FRAME
+  image="units/human-loyalists/paladin/paladin.png"
+#enddef
+#define PALADINS_HEALING_FRAME
+  image="units/human-loyalists/paladin/paladin.png"
+#enddef
+#define PALADINS_ATTACK_SWORD_FRAME
+  image="units/human-loyalists/paladin/paladin.png"
+#enddef
+
+#else
+#define PALADINS_BASEFRAME
+  image="units/human-loyalists/paladin.png"
+#enddef
+#define PALADINS_MOVING_FRAME
+  image="units/human-loyalists/paladin-moving.png"
+#enddef
+#define PALADINS_HEALING_FRAME
+  image="units/human-loyalists/paladin-healing.png"
+#enddef
+#define PALADINS_ATTACK_SWORD_FRAME
+  image="units/human-loyalists/paladin-attack-sword.png"
+#enddef
+#endif
+
 [unit_type]
   id=Lemyr_Lich
   name= _ "Preserved Lich"
   race=undead
   gender=male
-  image="units/human-loyalists/paladin.png"
+  {PALADINS_BASEFRAME}
   profile="portraits/humans/paladin.png"
   {MAGENTA_IS_THE_TEAM_COLOR}
   hitpoints=85
@@ -39,7 +68,7 @@
     [frame]
       begin=-300
       end=300
-      image="units/human-loyalists/paladin-healing.png"
+      {PALADINS_HEALING_FRAME}
       halo=halo/holy/halo6.png,halo/holy/halo1.png,halo/holy/halo2.png,halo/holy/halo3.png,halo/holy/halo4.png,halo/holy/halo5.png,halo/holy/halo6.png
     [/frame]
   [/healing_anim]
@@ -81,7 +110,7 @@
     [frame]
       begin=0
       end=150
-      image="units/human-loyalists/paladin-moving.png"
+      {PALADINS_MOVING_FRAME}
     [/frame]
   [/movement_anim]
   [attack_anim]
@@ -91,7 +120,7 @@
     [frame]
       begin=-250
       end=-200
-      image="units/human-loyalists/paladin.png"
+      {PALADINS_MOVING_FRAME}
       sound=horse-canter.wav
     [/frame]
     [if]
@@ -99,7 +128,7 @@
       [frame]
         begin=-200
         end=150
-        image="units/human-loyalists/paladin-moving.png"
+        {PALADINS_MOVING_FRAME}
         sound={SOUND_LIST:MISS}
       [/frame]
     [/if]
@@ -108,14 +137,14 @@
       [frame]
         begin=-200
         end=150
-        image="units/human-loyalists/paladin-moving.png"
+        {PALADINS_MOVING_FRAME}
         sound=spear.ogg
       [/frame]
     [/else]
     [frame]
       begin=150
       end=200
-      image="units/human-loyalists/paladin.png"
+      {PALADINS_BASEFRAME}
     [/frame]
   [/attack_anim]
   [attack_anim]
@@ -125,7 +154,7 @@
     [frame]
       begin=-200
       end=-150
-      image="units/human-loyalists/paladin.png"
+      {PALADINS_BASEFRAME}
       sound=horse-canter.wav
       [/frame]
       [if]
@@ -133,7 +162,7 @@
         [frame]
           begin=-150
           end=100
-          image="units/human-loyalists/paladin-attack-sword.png"
+          {PALADINS_ATTACK_SWORD_FRAME}
           sound={SOUND_LIST:MISS}
         [/frame]
       [/if]
@@ -142,14 +171,14 @@
         [frame]
           begin=-150
           end=100
-          image="units/human-loyalists/paladin-attack-sword.png"
+          {PALADINS_ATTACK_SWORD_FRAME}
           sound={SOUND_LIST:SWORD_SWISH}
         [/frame]
       [/else]
       [frame]
         begin=100
         end=200
-        image="units/human-loyalists/paladin.png"
+        {PALADINS_BASEFRAME}
     [/frame]
   [/attack_anim]
   [attack_anim]
@@ -160,17 +189,17 @@
     [frame]
       begin=-300
       end=-225
-      image="units/human-loyalists/paladin-healing.png"
+      {PALADINS_HEALING_FRAME}
     [/frame]
     [frame]
       begin=-225
       end=-150
-      image="units/human-loyalists/paladin-healing.png"
+      {PALADINS_HEALING_FRAME}
     [/frame]
     [frame]
       begin=-150
       end=-75
-      image="units/human-loyalists/paladin-healing.png"
+      {PALADINS_HEALING_FRAME}
       halo=halo/holy/halo6.png
     [/frame]
     [if]
@@ -178,7 +207,7 @@
       [frame]
         begin=-75
         end=0
-        image="units/human-loyalists/paladin-healing.png"
+        {PALADINS_HEALING_FRAME}
         sound={SOUND_LIST:HOLY}
         halo=halo/holy/halo1.png
       [/frame]
@@ -188,7 +217,7 @@
       [frame]
         begin=-75
         end=0
-        image="units/human-loyalists/paladin-healing.png"
+        {PALADINS_HEALING_FRAME}
         sound={SOUND_LIST:HOLY_MISS}
         halo=halo/holy/halo1.png
       [/frame]
@@ -196,30 +225,30 @@
     [frame]
       begin=0
       end=75
-      image="units/human-loyalists/paladin-healing.png"
+      {PALADINS_HEALING_FRAME}
       halo=halo/holy/halo3.png
     [/frame]
     [frame]
       begin=75
       end=150
-      image="units/human-loyalists/paladin-healing.png"
+      {PALADINS_HEALING_FRAME}
       halo=halo/holy/halo5.png
     [/frame]
     [frame]
       begin=150
       end=200
-      image="units/human-loyalists/paladin-healing.png"
+      {PALADINS_HEALING_FRAME}
       halo=halo/holy/halo6.png
     [/frame]
     [frame]
       begin=200
       end=250
-      image="units/human-loyalists/paladin-healing.png"
+      {PALADINS_HEALING_FRAME}
     [/frame]
     [frame]
       begin=250
       end=300
-      image="units/human-loyalists/paladin-healing.png"
+      {PALADINS_HEALING_FRAME}
     [/frame]
   [/attack_anim]
   [attack_anim]
@@ -232,7 +261,7 @@
       [frame]
         begin=-450
         end=-375
-        image="units/human-loyalists/paladin-healing.png"
+        {PALADINS_HEALING_FRAME}
         sound=magic-faeriefire.ogg
         halo=halo/elven/faerie-fire-halo1.png
         halo_x,halo_y=0,-28
@@ -243,7 +272,7 @@
       [frame]
         begin=-450
         end=-375
-        image="units/human-loyalists/paladin-healing.png"
+        {PALADINS_HEALING_FRAME}
         sound=magic-faeriefire-miss.ogg
         halo=halo/elven/faerie-fire-halo1.png
         halo_x,halo_y=0,-28
@@ -252,42 +281,42 @@
     [frame]
       begin=-375
       end=-300
-      image="units/human-loyalists/paladin-healing.png"
+      {PALADINS_HEALING_FRAME}
       halo=halo/elven/faerie-fire-halo2.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       begin=-300
       end=-225
-      image="units/human-loyalists/paladin-healing.png"
+      {PALADINS_HEALING_FRAME}
       halo=halo/elven/faerie-fire-halo3.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       begin=-225
       end=-150
-      image="units/human-loyalists/paladin-healing.png"
+      {PALADINS_HEALING_FRAME}
       halo=halo/elven/faerie-fire-halo4.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       begin=-150
       end=-75
-      image="units/human-loyalists/paladin-healing.png"
+      {PALADINS_HEALING_FRAME}
       halo=halo/elven/faerie-fire-halo5.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       begin=-75
       end=0
-      image="units/human-loyalists/paladin-healing.png"
+      {PALADINS_HEALING_FRAME}
       halo=halo/elven/faerie-fire-halo6.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       begin=-0
       end=75
-      image="units/human-loyalists/paladin.png"
+      {PALADINS_HEALING_FRAME}
       halo=halo/elven/faerie-fire-halo7.png
       halo_x,halo_y=0,-28
     [/frame]
@@ -1059,3 +1088,8 @@
 	  {GREATER_AMLA_DEFAULT_BONUSES}
   [/advancement]
 [/unit_type]
+
+#unddef PALADINS_BASEFRAME
+#unddef PALADINS_MOVING_FRAME
+#unddef PALADINS_HEALING_FRAME
+#unddef PALADINS_ATTACK_SWORD_FRAME
