--- a/For_Power/_main.cfg
+++ b/For_Power/_main.cfg
@@ -54,10 +54,10 @@
 	define=FOR_POWER_I
 
 	difficulties=EASY,NORMAL,HARD
-	difficulty_descriptions=_"&units/human-magi/mage+female-attack-magic1.png=Wizard's apprentice;*&units/human-magi/red-mage+female-attack-magic-1.png=Wizard;&units/human-magi/arch-mage+female-attack-magic-1.png=Battle wizard"
-
+	difficulty_descriptions={MENU_IMG_TXT2 "units/human-magi/mage+female-attack-magic1.png" _"Wizard's apprentice" _"(Easy)"} + ";" + {MENU_IMG_TXT2 "units/human-magi/red-mage+female-attack-magic-1.png" _"Wizard" _"(Normal)"} + ";" + {MENU_IMG_TXT2 "units/human-magi/arch-mage+female-attack-magic-1.png" _"Battle wizard" _"(Hard)"}
+  
 	icon=data/add-ons/For_Power/images/bookshelf-full.png
-	image=data/add-ons/For_Power/images/magefemale.png
+	image="data/core/images/portraits/humans/transparent/mage+female.png"
 	description=_ "Follow the tale of the young mage Clare, through an orcish assault on her village, to the assassination someone she liked, and beyond.. Lead her through her battles and choose her path of revenge to end the tale."
 
 	first_scenario=01_Defend_the_village
@@ -71,10 +71,10 @@
   define=FOR_POWER_II
   
   difficulties=EASY,NORMAL,HARD
-  difficulty_descriptions=_"&units/human-magi/mage+female-attack-magic1.png=Tourist;*&units/human-magi/red-mage+female-attack-magic-1.png=Traveller;&units/human-magi/arch-mage+female-attack-magic-1.png=Adventurer"
+  difficulty_descriptions={MENU_IMG_TXT2 "units/human-magi/mage+female-attack-magic1.png" _"Tourist" _"(Easy)"} + ";" + {MENU_IMG_TXT2 "units/human-magi/red-mage+female-attack-magic-1.png" _"Traveller" _"(Normal)"} + ";" + {MENU_IMG_TXT2 "units/human-magi/arch-mage+female-attack-magic-1.png" _"Adventurer" _"(Hard)"}
   
   icon=data/add-ons/For_Power/images/bookshelf-full.png
-	image=data/add-ons/For_Power/images/magesilverfemale.png
+	image="data/core/images/portraits/humans/transparent/mage-silver+female.png"
 	description=_ "A few years after defeating the orcish sovereign Clare wanted to go through some adventures. Accompany her and find out what she saw."
 
 	first_scenario=01_Return_of_troubles
@@ -88,7 +88,7 @@
   define=FOR_POWER_III
   
   difficulties=EASY,NORMAL,HARD
-  difficulty_descriptions=_"&units/human-magi/mage+female-attack-magic1.png=Tourist;*&units/human-magi/red-mage+female-attack-magic-1.png=Traveller;&units/human-magi/arch-mage+female-attack-magic-1.png=Adventurer"
+  difficulty_descriptions={MENU_IMG_TXT2 "units/human-magi/mage+female-attack-magic1.png" _"Tourist" _"(Easy)"} + ";" + {MENU_IMG_TXT2 "units/human-magi/red-mage+female-attack-magic-1.png" _"Traveller" _"(Normal)"} + ";" + {MENU_IMG_TXT2 "units/human-magi/arch-mage+female-attack-magic-1.png" _"Adventurer" _"(Hard)"}
   
   icon=data/add-ons/For_Power/images/bookshelf-full.png
 	image=data/add-ons/For_Power/images/portraits/Clare.png
@@ -105,7 +105,7 @@
   define=FOR_POWER_IV
   
   difficulties=EASY,NORMAL,HARD
-  difficulty_descriptions=_"&units/human-magi/mage+female-attack-magic1.png=Tourist;*&units/human-magi/red-mage+female-attack-magic-1.png=Traveller;&units/human-magi/arch-mage+female-attack-magic-1.png=Adventurer"
+  difficulty_descriptions={MENU_IMG_TXT2 "units/human-magi/mage+female-attack-magic1.png" _"Tourist" _"(Easy)"} + ";" + {MENU_IMG_TXT2 "units/human-magi/red-mage+female-attack-magic-1.png" _"Traveller" _"(Normal)"} + ";" + {MENU_IMG_TXT2 "units/human-magi/arch-mage+female-attack-magic-1.png" _"Adventurer" _"(Hard)"}
   
   icon=data/add-ons/For_Power/images/bookshelf-full.png
 	image=data/add-ons/For_Power/images/portraits/Clare.png
@@ -122,10 +122,10 @@
   define=FOR_POWER_V
   
   difficulties=EASY,NORMAL,HARD
-  difficulty_descriptions=_"&units/human-magi/mage+female-attack-staff2.png=Battler;*&units/human-magi/white-mage+female-melee-3.png=Campaigner;&units/human-magi/white-cleric+female-mace-3.png=Crusader"
+  difficulty_descriptions={MENU_IMG_TXT2 "units/human-magi/mage+female-attack-staff2.png" _"Battler" _"(Easy)"} + ";" + {MENU_IMG_TXT2 "units/human-magi/white-mage+female-melee-3.png" _"Campaigner" _"(Normal)"} + ";" + {MENU_IMG_TXT2 "units/human-magi/white-cleric+female-mace-3.png" _"Crusader" _"(Hard)"}
   
   icon=data/add-ons/For_Power/images/bookshelf-full.png
-	image=data/add-ons/For_Power/images/magelightfemale.png
+	image="data/core/images/portraits/humans/transparent/mage-light+female.png"
 	description=_ "Undead are attacking everywhere. They come from nowhere, cause a lot of havoc and then ... disappear. Nobody is able to defeat them. But a group of unusual heroes is going to fight them. Will they succeed in destroying them once and for all or will the undead manage to destroy everything beautiful in the Northlands (and then in the rest of the Great Continent)? Accompany the heroes and watch their crusade with your own eyes."
 
 	first_scenario=01_Banished_from_paradise
