--- a/For_Power/mainline-strings.cfg
+++ b/For_Power/mainline-strings.cfg
@@ -55,6 +55,18 @@ _ "shadow wave"
 _ "chill tempest"
 #enddef
 
+#define STR_FIREBALL
+_ "fireball"
+#enddef
+
+#define STR_CHILL_WAVE
+_ "chill wave"
+#enddef
+
+#define STR_PLAGUE_STAFF
+_ "plague staff"
+#enddef
+
 #textdomain wesnoth-help
 
 #define ILLUMINATES_DESCRIPTION
