--- a/For_Power/scenarios/05_A_Mage.cfg
+++ b/For_Power/scenarios/05_A_Mage.cfg
@@ -105,11 +105,11 @@
 		[/move_unit]
 		[message]
 		  speaker=Haldar
-		  message=_"Hello. Can a pilgrim rest in your village?"
+		  message=_"Hail! May a pilgrim seek rest within your village?"
 		[/message]
 		[message]
 		  speaker=Glacyn
-		  message=_"Yes, you are welcome."
+		  message=_"Indeed a pilgrim may. You are welcome here."
 		[/message]
 		[message]
 		  speaker=Haldar
@@ -125,7 +125,7 @@
 		[/scroll_to_unit]
 		[message]
 		  speaker=Haldar
-		  message=_"Aaah it is really pleasant here."
+		  message=_"Truly, this is an idyllic village."
 		[/message]
 		[move_unit]
 		  id=Clare
@@ -134,59 +134,59 @@
 		[/move_unit]
 		[message]
 		  speaker=Clare
-		  message=_"Hello. May I sit next to you?"
+		  message=_"Hello there, pilgrim. May I join you?"
 		[/message]
 		[message]
 		  speaker=Haldar
-		  message=_"Yes of course."
+		  message=_"Certainly, miss...?"
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"By the way my name is Clare."
+		  message=_"Clare. The name is Clare."
 		[/message]
 		[message]
 		  speaker=Haldar
-		  message=_"Nice to meet you Clare. I am Haldar."
+		  message=_"Well, it is a pleasure to meet you Clare. I go by the name of Haldar."
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"I can see that you are a mage too. Can you teach me, please?"
+		  message=_"It is good to make acquaintance with you, too. I can tell by your attire that your are a mage too. Could you possibly give me some instruction?"
 		[/message]
 		[message]
 		  speaker=Haldar
-		  message=_"Yes, I can. But I have no books and tools with me. So if you want me to teach you you must go to my place."
+		  message=_"It would be an honour. However, I have no books or tools on my person. If you wish to learn, you will have to travel to my home."
 		[/message]
 		{TELEPORT_UNIT id=Lemyr 9 31}
 		[message]
 		  speaker=Clare
-		  message=_"Where is it if I may ask?"
+		  message=_"Where is your home? If you do not mind me asking, of course?"
 		[/message]
 		[message]
 		  speaker=Haldar
-		  message=_"In the Heart Mountains."
+		  message=_"It is in the Heart Mountains. In fact, I have a map showing its position on me. Here you go."
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"Ok. I will go to your place."
+		  message=_"Thank you. I will travel there soon."
 		[/message]
 		[message]
 		  speaker=Haldar
-		  message=_"I will be waiting to you."
+		  message=_"I shall await your arrival eagerly."
 		[/message]
 		[kill]
 		  id=Haldar
 		[/kill]
 		[message]
 		  speaker=Lemyr
-		  message=_"I do not have a good feeling about him."
+		  message=_"Hmm ... I do not have a good feeling about that one."
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"But I do."
+		  message=_"Oh, but I really do..."
 		[/message]
 		[message]
 		  speaker=Lemyr
-		  message=_"As you think."
+		  message=_"If that is what you think, then I can do nothing."
 		[/message]
 		[hide_unit]
 		  side=1
@@ -196,7 +196,7 @@
     [/modify_turns]
 		[message]
 		  speaker=narrator
-		  message=_"But this night something bad happens..."
+		  message=_"That very night, as the moon reached its peak, disaster struck."
 		[/message]
 		[unit]
       side=4
@@ -215,7 +215,7 @@
 		{ATTACK_AND_KILL assassin 22 32 ranged}
 		[message]
 		  speaker=assassin
-		  message=_"Ha ha ha."
+		  message=_"Hah!"
 		[/message]
 		[store_unit]
 		  [filter]
@@ -240,14 +240,18 @@
     [/unit]
     [message]
 		  speaker=guard
-		  message=_"No. Glacyn has been killed!"
+		  message=_"Sergeant? Sergeant Glacyn? Answer me?"
+		[/message]
+    [message]
+		  speaker=guard
+		  message=_"Curses! He has breathed his last."
 		[/message]
 		[unhide_unit]
 		  side=1
 		[/unhide_unit]
 		[message]
 		  speaker=Clare
-		  message=_"No. It cannot be true!"
+		  message=_"No! He cannot be dead... It is not true."
 		[/message]
 		[move_unit]
 		  id=Clare
@@ -264,31 +268,35 @@
 		[/scroll_to_unit]
 		[message]
 		  speaker=Lemyr
-		  message=_"It is true. He is really dead."
+		  message=_"Clare, it is true. It saddens me to say this, but he is gone now."
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"But who could do it?"
+		  message=_"But... How? Who could have done such a thing?"
 		[/message]
     [message]
 		  speaker=guard
-		  message=_"It was surely an orc."
+		  message=_"I recognise that poison. It’s the same toxin that once nearly slew me. Orcs did this."
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"It seems that the words of orcish warlord came true. Anyhow he will pay for it! Of course when we find him!"
+		  message=_"Then we must make the orcs pay! Get a search party ready!"
+		[/message]
+    [message]
+		  speaker=guard
+		  message=_"I’m sorry, ma’am, but we need every guard to defend the village."
 		[/message]
 		[message]
 		  speaker=Lemyr
-		  message=_"I am sorry. You must find him at your own. Somebody must stay here and protect the village."
+		  message=_"Clare, I am afraid that we must part ways again. Good luck in the search. Give the orc my hate, and that of the entire village."
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"You are right. I am leaving immediately. Good bye friend. I hope that we will reunite soon."
+		  message=_"I suppose that you are right. I need to go now to stand a chance, so this is goodbye, for now. I hope we can re-unite at the soonest possible time."
 		[/message]
 		[message]
 		  speaker=Lemyr
-		  message=_"So do I."
+		  message=_"So do I, Clare."
 		[/message]
 		# Lemyr stays in the village
 		{MODIFY_UNIT id=Lemyr side 2}
