--- a/For_Power/scenarios/10b_Skeletons.cfg
+++ b/For_Power/scenarios/10b_Skeletons.cfg
@@ -251,6 +251,8 @@
       message=_"What are you still doing, Clare? Is this too hard for you?"
     [/message]
   [/event]
+  
+  {CLARES_DEATH2}
 [/scenario]
 
 #unddef SKELETON
