--- a/For_Power/scenarios/14a_Heavy_Paid_Victory.cfg
+++ b/For_Power/scenarios/14a_Heavy_Paid_Victory.cfg
@@ -52,7 +52,7 @@
 	  [/message]
 	  [message]
 	    speaker=Merissa
-	    message=_"What is wrong with you, maiden? We won. You should be happy."
+	    message=_"What is wrong with you, girl? We won. You should be happy."
 	  [/message]
 	  [message]
 	    id=Clare
