--- a/For_Power/scenarios5/04_March_to_the_East.cfg
+++ b/For_Power/scenarios5/04_March_to_the_East.cfg
@@ -144,7 +144,7 @@
     [/message]
     [message]
       speaker=Jolla
-      message=_"But how?! I have difficulties with seeing and you are close to me."
+      message=_"But how?! I have difficulties with seeing you and you are close to me."
     [/message]
     [message]
       speaker=Lemyr
