--- a/For_Power/units/Blessed_Mage.cfg
+++ b/For_Power/units/Blessed_Mage.cfg
@@ -236,7 +236,7 @@ Though physically frail, and untrained as warriors, the ‘Red Magi’ have a nu
   [/attack]
   [attack]
     name=fireball
-    description=_"fireball"
+    description={STR_FIREBALL}
     type=fire
     range=ranged
     [specials]
