--- a/For_Power/macros/redeem.cfg
+++ b/For_Power/macros/redeem.cfg
@@ -13,8 +13,7 @@
   [damage]
     id=redeem 1
     name= _ "redeem"
-    description= _ "Redeem:
-    The target of this attack is fully absorbed into the attacker's soul, a much better place than the world he was taken from. The attacker will grow stronger after a certain number of redeems. Level 0 targets are absorbed with a 100% chance to succeed, level 1 targets are absorbed with a 90% chance to be absorbed, level 2 targets are absorbed with a 40% chance, level 3 targets are absorbed with a 20% chance, level 4 targets are absorbed with a 5% chance and level 5 targets are absorbed with a 1% chance. Experience is not gained."
+    description= _ "The target of this attack is fully absorbed into the attacker's soul, a much better place than the world he was taken from. The attacker will grow stronger after a certain number of redeems. Level 0 targets are absorbed with a 100% chance to succeed, level 1 targets are absorbed with a 90% chance to be absorbed, level 2 targets are absorbed with a 40% chance, level 3 targets are absorbed with a 20% chance, level 4 targets are absorbed with a 5% chance and level 5 targets are absorbed with a 1% chance. Experience is not gained."
   [/damage]
 #enddef
 
@@ -22,8 +21,7 @@
   [damage]
     id=redeem 2
     name= _ "redeem"
-    description= _ "Redeem:
-    The target of this attack is fully absorbed into the attacker's soul, a much better place than the world he was taken from. The attacker will grow stronger after a certain number of redeems. Level 0 and level 1 targets are absorbed with a 100% chance to succeed, level 2 targets are absorbed with a 90% chance to be absorbed, level 3 targets are absorbed with a 50% chance, level 4 targets are absorbed with a 25% chance and level 5 targets are absorbed with a 10% chance. Experience is not gained."
+    description= _ "The target of this attack is fully absorbed into the attacker's soul, a much better place than the world he was taken from. The attacker will grow stronger after a certain number of redeems. Level 0 and level 1 targets are absorbed with a 100% chance to succeed, level 2 targets are absorbed with a 90% chance to be absorbed, level 3 targets are absorbed with a 50% chance, level 4 targets are absorbed with a 25% chance and level 5 targets are absorbed with a 10% chance. Experience is not gained."
   [/damage]
 #enddef
 
@@ -31,8 +29,7 @@
   [damage]
     id=redeem 3
     name= _ "redeem"
-    description= _ "Redeem:
-    The target of this attack is fully absorbed into the attacker's soul, a much better place than the world he was taken from. The attacker will grow stronger after a certain number of redeems. Targets bellow level 3 are absorbed with a 100% chance to succeed, level 3 targets are absorbed with a 80% chance, level 4 targets are absorbed with a 60% chance and level 5 targets are absorbed with a 45% chance. Experience is not gained."
+    description= _ "The target of this attack is fully absorbed into the attacker's soul, a much better place than the world he was taken from. The attacker will grow stronger after a certain number of redeems. Targets bellow level 3 are absorbed with a 100% chance to succeed, level 3 targets are absorbed with a 80% chance, level 4 targets are absorbed with a 60% chance and level 5 targets are absorbed with a 45% chance. Experience is not gained."
   [/damage]
 #enddef
 
@@ -40,8 +37,7 @@
   [damage]
     id=redeem 4
     name= _ "redeem"
-    description= _ "Redeem:
-    The target of this attack is fully absorbed into the attacker's soul, a much better place than the world he was taken from. The attacker will grow stronger after a certain number of redeems. Targets bellow level 4 are absorbed with a 100% chance to succeed, level 4 targets are absorbed with a 85% chance and level 5 targets are absorbed with a 60% chance. Experience is not gained."
+    description= _ "The target of this attack is fully absorbed into the attacker's soul, a much better place than the world he was taken from. The attacker will grow stronger after a certain number of redeems. Targets bellow level 4 are absorbed with a 100% chance to succeed, level 4 targets are absorbed with a 85% chance and level 5 targets are absorbed with a 60% chance. Experience is not gained."
   [/damage]
 #enddef
 
@@ -49,8 +45,7 @@
   [damage]
     id=redeem 5
     name= _ "redeem"
-    description= _ "Redeem:
-    The target of this attack is fully absorbed into the attacker's soul, a much better place than the world he was taken from. The attacker will grow stronger after a certain number of redeems. Targets bellow level 5 are absorbed with a 100% chance to succeed and level 5 targets are absorbed with a 80% chance. Experience is not gained."
+    description= _ "The target of this attack is fully absorbed into the attacker's soul, a much better place than the world he was taken from. The attacker will grow stronger after a certain number of redeems. Targets bellow level 5 are absorbed with a 100% chance to succeed and level 5 targets are absorbed with a 80% chance. Experience is not gained."
   [/damage]
 #enddef
 
@@ -58,8 +53,7 @@
   [damage]
     id=redeem 6
     name= _ "redeem"
-    description= _ "Redeem:
-    The target of this attack is fully absorbed into the attacker's soul, a much better place than the world he was taken from. The attacker will grow stronger after a certain number of redeems. All targets are absorbed with a 100% chance to succeed. Experience is not gained."
+    description= _ "The target of this attack is fully absorbed into the attacker's soul, a much better place than the world he was taken from. The attacker will grow stronger after a certain number of redeems. All targets are absorbed with a 100% chance to succeed. Experience is not gained."
   [/damage]
 #enddef
 
@@ -67,8 +61,7 @@
   [damage]
     id=redeem 7
     name= _ "redeem"
-    description= _ "Redeem:
-    The target of this attack is fully absorbed into the attacker's soul, a much better place than the world he was taken from. The attacker will grow stronger after a certain number of redeems. All targets are absorbed with a 100% chance to succeed. Experience is not gained."
+    description= _ "The target of this attack is fully absorbed into the attacker's soul, a much better place than the world he was taken from. The attacker will grow stronger after a certain number of redeems. All targets are absorbed with a 100% chance to succeed. Experience is not gained."
   [/damage]
 #enddef
 
