--- a/For_Power/mainline-strings.cfg
+++ b/For_Power/mainline-strings.cfg
@@ -72,8 +72,7 @@ _ "plague staff"
 #define ILLUMINATES_DESCRIPTION
   name= _ "illuminates"
   female_name= _ "female^illuminates"
-  description= _ "Illuminates:
-This unit illuminates the surrounding area, making lawful units fight better, and chaotic units fight worse.
+  description= _ "This unit illuminates the surrounding area, making lawful units fight better, and chaotic units fight worse.
 
 Any units adjacent to this unit will fight as if it were dusk when it is night, and as if it were day when it is dusk."
 #enddef
@@ -81,8 +80,7 @@ Any units adjacent to this unit will fight as if it were dusk when it is night, 
 #define LEADERSHIP_DESCRIPTION
   name= _ "leadership"
     female_name= _ "female^leadership"
-    description= _ "Leadership:
-This unit can lead our own units that are next to it, making them fight better.
+    description= _ "This unit can lead our own units that are next to it, making them fight better.
 
 Adjacent own units of lower level will do more damage in battle. When a unit adjacent to, of a lower level than, and on the same side as a unit with Leadership engages in combat, its attacks do 25% more damage times the difference in their levels."
 #enddef
