--- a/For_Power/units/Blessed_Mage.cfg
+++ b/For_Power/units/Blessed_Mage.cfg
@@ -300,8 +300,7 @@ Though physically frail, and untrained as warriors, the ‘Red Magi’ have a nu
       id=regenerates_slightly
       name= _ "regenerates slightly"
       female_name= _ "female^regenerates slightly"
-      description= _ "Regenerates slightly:
-The unit will heal itself 4 HP per turn. If it is poisoned, these two effects will negate themselves."
+      description= _ "The unit will heal itself 4 HP per turn. If it is poisoned, these two effects will negate themselves."
       affect_self=yes
       poison=slowed
     [/regenerate]
@@ -419,8 +418,7 @@ Silver magi are often more physically adept than other magi, and their skills ar
       id=regenerates_slightly2
       name= _ "regenerates slightly"
       female_name= _ "female^regenerates slightly"
-      description= _ "Regenerates slightly:
-The unit will heal itself 4 HP per turn. If it is poisoned, it will remove the poison instead of healing."
+      description= _ "The unit will heal itself 4 HP per turn. If it is poisoned, it will remove the poison instead of healing."
       affect_self=yes
       poison=cured
     [/regenerate]
@@ -798,8 +796,7 @@ The unit will heal itself 4 HP per turn. If it is poisoned, it will remove the p
           id=regenerates_slightly2
           name= _ "regenerates slightly"
           female_name= _ "female^regenerates slightly"
-          description= _ "Regenerates slightly:
-The unit will heal itself 4 HP per turn. If it is poisoned, it will remove the poison instead of healing."
+          description= _ "The unit will heal itself 4 HP per turn. If it is poisoned, it will remove the poison instead of healing."
           affect_self=yes
           poison=cured
         [/regenerate]
