wescamp.py: Update from add-on server

--- a/For_Power/scenarios/04_Return.cfg
+++ b/For_Power/scenarios/04_Return.cfg
@@ -226,7 +226,7 @@
       amount=$glacyn_gold
     [/gold]
 		[objectives]
-			side=1,5
+      side=1,5
 			[objective]
 				description= _ "Defeat all enemy leaders"
 				condition=win
@@ -357,15 +357,15 @@
 		name=enemies defeated
 		[message]
 			speaker=Clare
-			message=_"Yes we did it. They will never think about attacking our village."
+			message=_"We did it! After this day, I doubt they will ever dare to attack again."
 		[/message]
 		[message]
 			speaker=Glacyn
-			message=_"Lot of thanks to our earl."
+			message=_"Give my thanks to the Earl."
 		[/message]
 		[message]
 			speaker=Rheran
-			message=_"I will tell him it, sergeant. Good bye."
+			message=_"That I shall do, Sergeant. Farewell."
 		[/message]
 		{MODIFY_UNIT id=Lemyr side 1}
 		{MODIFY_UNIT id=Lemyr canrecruit no}
@@ -374,15 +374,15 @@
 		[/kill]
 		[message]
 			speaker=Clare
-			message=_"I am glad you returned Lemyr."
+			message=_"I am glad that you have returned, Lemyr."
 		[/message]
 		[message]
 			speaker=Lemyr
-			message=_"Thank you."
+			message=_"And I am glad to be back."
 		[/message]
 		[message]
 			speaker=Clare
-			message=_"Let us celebrate."
+			message=_"We must give our dead a hero’s funeral. Then, we can celebrate our victory."
 		[/message]
 		[endlevel]
 		  result=victory
@@ -395,7 +395,7 @@
 	  name=time over
 	  [message]
 	    speaker=Glacyn
-	    message=_"More orcs are comming. We are doomed."
+	    message=_"Look! Hundreds of Orcs are upon the horizon! Doom is upon us!"
 	  [/message]
 	  {DEFEAT}
 	[/event]
