--- a/For_Power/scenarios/Epilogue_a.cfg
+++ b/For_Power/scenarios/Epilogue_a.cfg
@@ -46,7 +46,7 @@
       story = _ "The villages that had been destroyed were rebuilt and humans settled them again. Peace was ruling the Northlands."
     [/part]
     [part]
-      story = _ "Clare and Lemyr lived peacefuly in their village and were happy. And nothing could break it."
+      story = _ "Clare and Lemyr lived peacefully in their village and were happy. And nothing could break it."
     [/part]
   [/story]
   
