--- a/For_Power/scenarios5/03_Besieged.cfg
+++ b/For_Power/scenarios5/03_Besieged.cfg
@@ -420,7 +420,7 @@
     [/message]
     [message]
       speaker=cleric
-      message=_"You will help you with your noble quest."
+      message=_"I will help you with your noble quest."
     [/message]
     [modify_unit]
       [filter]
