--- a/For_Power/macros/misc.cfg
+++ b/For_Power/macros/misc.cfg
@@ -13,6 +13,14 @@
   [/capture_village]
 #enddef
 
+#define SET_TERRAIN X Y TYPE
+  [terrain]
+    terrain={TYPE}
+    x={X}
+    y={Y}
+  [/terrain]
+#enddef
+
 #define TRAIT_BLESSED
   [trait]
     id=blessed
