--- a/For_Power/scenarios/12_An_Orchish_Town.cfg
+++ b/For_Power/scenarios/12_An_Orchish_Town.cfg
@@ -75,7 +75,7 @@
 	  [/message]
 	  [message]
 	    speaker=orc
-	    message=_"Undeads? Destroy them, grunts!"
+	    message=_"Undead? Destroy them, grunts!"
 	    [show_if]
 	      [variable]
 	        name=path_chosen
@@ -181,7 +181,7 @@
     [/message]
     [message]
       speaker=Clare
-      message=_"You may try it, foul orcs."
+      message=_"You may try it, fool orcs."
     [/message]
 	[/event]
 	
