--- a/For_Power/scenarios2/04_Visiting_The_Earl.cfg
+++ b/For_Power/scenarios2/04_Visiting_The_Earl.cfg
@@ -123,7 +123,7 @@
 		[/message]
 		[message]
 			speaker=Clare
-			message=_"But sir..."
+			message=_"But sir ..."
 		[/message]
 		[message]
 			speaker=earl
@@ -131,7 +131,7 @@
 		[/message]
 		[message]
 			speaker=Clare
-			message=_"But..."
+			message=_"But ..."
 		[/message]
 		[message]
 			speaker=earl
@@ -151,7 +151,7 @@
 	    [filter]
 	      id=earl
 	    [/filter]
-	    duration=scenario
+	    duration=forever
 	    silent=yes
 	    [effect]
 	      apply_to=hitpoints
