--- a/For_Power/scenarios2/07_West_Front.cfg
+++ b/For_Power/scenarios2/07_West_Front.cfg
@@ -61,8 +61,8 @@
   [side]
     side=3
     controller=ai
-		team_name=undeads
-    user_team_name= _ "Undeads"
+		team_name=undead
+    user_team_name= _ "Undead"
     
     type=Lich
     id=lich
@@ -82,8 +82,8 @@
   [side]
     side=4
     controller=ai
-		team_name=undeads
-    user_team_name= _ "Undeads"
+		team_name=undead
+    user_team_name= _ "Undead"
     
     type=Necromancer
     id=necro1
@@ -100,8 +100,8 @@
   [side]
     side=5
     controller=ai
-		team_name=undeads
-    user_team_name= _ "Undeads"
+		team_name=undead
+    user_team_name= _ "Undead"
     
     type=Necromancer
     id=necro2
@@ -163,7 +163,7 @@
     [/message]
     [message]
       speaker=Ralenyth
-      message=_"What are you doing here? It isn't a good place for a maiden. We have to face undeads here!"
+      message=_"What are you doing here? It isn't a good place for a maiden. We have to face undead here!"
     [/message]
     [message]
       speaker=Clare
@@ -179,7 +179,7 @@
     [/message]
     [message]
       speaker=Ralenyth
-      message=_"Anyhow, thank you for arriving. With you our chances to defeat these undeads are much better."
+      message=_"Anyhow, thank you for arriving. With you our chances to defeat these undead are much better."
     [/message]
     [message]
       speaker=narrator
@@ -314,7 +314,7 @@
 	  name=time over
 	  [message]
 	    speaker=Ralenyth
-	    message=_"More undeads are coming. We are doomed."
+	    message=_"More undead are coming. We are doomed."
 	  [/message]
 	  {DEFEAT}
 	[/event]
