--- a/For_Power/scenarios2/08_Talks_with_Ralenyth.cfg
+++ b/For_Power/scenarios2/08_Talks_with_Ralenyth.cfg
@@ -66,8 +66,8 @@
   [side]
     side=3
     controller=ai
-    team_name=undeads
-    user_team_name= _ "Undeads"
+    team_name=undead
+    user_team_name= _ "Undead"
     no_leader=yes
     gold=0
     income=0
@@ -205,7 +205,7 @@
     [/message]
     [message]
       speaker=Ralenyth
-      message=_"You may be a powerful mage but can't understand military issues. Return to your camp and prepare your soldiers for next undeads's attack."
+      message=_"You may be a powerful mage but can't understand military issues. Return to your camp and prepare your soldiers for next attack of the undead."
     [/message]
     [message]
       speaker=Clare
@@ -281,7 +281,7 @@
     {APPEND_MUSIC frantic.ogg}
     {APPEND_MUSIC suspense.ogg}
     {APPEND_MUSIC casualties_of_war.ogg}
-    {VARIABLE undeads_came no}
+    {VARIABLE undead_came no}
   [/event]
   
   [event]
@@ -308,12 +308,12 @@
       animate=no
     [/kill]
     [fire_event]
-      name=undeads_coming
+      name=undead_coming
     [/fire_event]
   [/event]
   
   [event]
-    name=undeads_coming
+    name=undead_coming
     [modify_side]
       side=3
       hidden=no
@@ -329,7 +329,7 @@
     {GENERIC_UNIT 3 (Skeleton Archer) 2 9}
     [message]
       speaker=Clare
-      message=_"Next undeads? Fight them."
+      message=_"Next undead? Fight them."
     [/message]
     {REPLACE_SCENARIO_MUSIC knalgan_theme.ogg}
     {APPEND_MUSIC northerners.ogg}
@@ -354,7 +354,7 @@
         description= _ "This scenario uses 24 hours schedule unlike the rest."
       [/note]
       [note]
-        description= _ "You have gained 2 additional turns so you have to defeat undeads before the dawn."
+        description= _ "You have gained 2 additional turns so you have to defeat undead before the dawn."
       [/note]
 	    {TURNS_RUN_OUT}
 			[gold_carryover]
@@ -362,7 +362,7 @@
 				carryover_percentage=40
 			[/gold_carryover]
 		[/objectives]
-    {VARIABLE undeads_came yes}
+    {VARIABLE undead_came yes}
   [/event]
   
   [event]
@@ -388,7 +388,7 @@
     first_time_only=no
     [filter_condition]
       [variable]
-        name=undeads_came
+        name=undead_came
         equals=yes
       [/variable]
     [/filter_condition]
@@ -418,7 +418,7 @@
       speaker=Clare
       message=_"Of course."
     [/message]
-    {CLEAR_VARIABLE undeads_came}
+    {CLEAR_VARIABLE undead_came}
     [endlevel]
 		  result=victory
 		  bonus=yes
