--- a/For_Power/scenarios2/11_Back_in_Dwarven_Doors.cfg
+++ b/For_Power/scenarios2/11_Back_in_Dwarven_Doors.cfg
@@ -93,7 +93,7 @@
     [/message]
     [message]
       speaker=Lemyr
-      message=_"It was only a nightmare. There were no undeads here at the night."
+      message=_"It was only a nightmare. There were no undead here at the night."
     [/message]
     [message]
       speaker=Merissa
