--- a/For_Power/scenarios2/12_Escape_from_prison.cfg
+++ b/For_Power/scenarios2/12_Escape_from_prison.cfg
@@ -426,7 +426,7 @@
     [/message]
     [message]
       speaker=Merissa
-      message=_"There are too many guards here. We need more undeads, Clare."
+      message=_"There are too many guards here. We need more undead, Clare."
     [/message]
     {LOYAL_UNDEAD_UNIT 1 (Walking Corpse) 9 6}
     {LOYAL_UNDEAD_UNIT 1 (Walking Corpse) 10 5}
