--- a/For_Power/scenarios2/13a_Escape_from_Dwarven_Doors.cfg
+++ b/For_Power/scenarios2/13a_Escape_from_Dwarven_Doors.cfg
@@ -243,8 +243,12 @@
   
   [event]
 	  name=capture
+    first_time_only=no
     [filter]
       side=1
+      [not]
+        type=Fugitive
+      [/not]
     [/filter]
     [message]
       speaker=unit
