--- a/For_Power/scenarios2/13b_The_Underground.cfg
+++ b/For_Power/scenarios2/13b_The_Underground.cfg
@@ -89,7 +89,7 @@
             id=Clare
           [/not]
         [/criteria]
-        value=10 # they hate undeads
+        value=10 # they hate undead
       [/goal]
       [goal]
         [criteria]
