--- a/For_Power/scenarios3/07_Back_in_underground.cfg
+++ b/For_Power/scenarios3/07_Back_in_underground.cfg
@@ -500,7 +500,7 @@
     [/filter_condition]
     [message]
       speaker=Clare
-      message=_"I can see more undeads coming from the surface. I am doomed."
+      message=_"I can see more undead coming from the surface. I am doomed."
     [/message]
   [/event]
   
