--- a/For_Power/scenarios3/10_Final_Confrontation.cfg
+++ b/For_Power/scenarios3/10_Final_Confrontation.cfg
@@ -418,11 +418,19 @@
     [/message]
     [message]
       speaker=Lethalia
-      message=_"Millions of lives, yes. But there are worse possibilities. Its prolonged glory is causing their mages to become overly wise, learning things nobody should learn. Magical academies must be interrupted in their studies from time to time, or they will unintentionally cause more evil than a global war."
+      message=_"No. I love the power I have, but it also brings responsibility. I have already done great failures, failures whose scale you cannot even comprehend. And one of its results is a doomsday prophecy. The Empire will cherish, growing into unimaginable heights, but at one point, they will learn how to change the world forever. Imagine what will be the first thing they will choose to do."
     [/message]
     [message]
       speaker=Clare
       message=_"Will they destroy all evil? Will they become immortal?"
+    [/message]
+    [message]
+      speaker=Lethalia
+      message=_"Immortality without using necromancy can be obtained only by demonology, that is an evil of a whole new level. But these mages are experimenting with it already. But they are aware of its dangers, so we can hope that they will be as cautious as they want to be. But they will attempt to destroy all evil. By making this world unsuitable for evil creatures, who are, almost globally, nocturnal. They will try to banish the night. By creating a new sun, or even more of them."
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"And this is bad?"
     [/message]
     [message]
       speaker=Lethalia
