--- a/For_Power/scenarios4/03_The_Swamp.cfg
+++ b/For_Power/scenarios4/03_The_Swamp.cfg
@@ -38,7 +38,7 @@
 	  side=2
 	  controller=ai
 	  team_name=enemies
-	  user_team_name= _ "Undeads"
+	  user_team_name= _ "Undead"
 	  
 	  type=Necromancer
     id=necro
