--- a/For_Power/units/Amiwen_Elvish_Seer.cfg
+++ b/For_Power/units/Amiwen_Elvish_Seer.cfg
@@ -629,7 +629,7 @@
     max_times=1
     always_display=yes
     id=woods
-    description= _ "more attuned to the woods"
+    description= _ "female^more attuned to the woods"
     image=icons/dress_silk_green.png
     strict_amla=yes
     require_amla="wings1,wings2,wings2,wings3"
@@ -652,7 +652,7 @@
     id=armour
     max_times=5
     always_display=yes
-    description= _ "better protected from magical attacks (2% better resistances)"
+    description= _ "female^better protected from magical attacks (2% better resistances)"
     image=icons/magical_shield.png
     strict_amla=yes
     require_amla=""
@@ -686,7 +686,7 @@
     always_display=yes
     id=heal2
     always_display=yes
-    description= _ "able to heal allies better"
+    description= _ "female^able to heal allies better"
     image=attacks/lightbeam.png
 	  strict_amla=yes
     require_amla=""
