--- a/For_Power/units/Lemyr_Lich.cfg
+++ b/For_Power/units/Lemyr_Lich.cfg
@@ -59,6 +59,18 @@
     arcane=120
     pierce=80
   [/resistance]
+  [portrait]
+    size=400
+    side="left"
+    mirror="false"
+    image="portraits/humans/transparent/paladin.png"
+  [/portrait]
+  [portrait]
+    size=400
+    side="right"
+    mirror="true"
+    image="portraits/humans/transparent/paladin.png"
+  [/portrait]
   [abilities]
     {ABILITY_REGENERATES}
     {ABILITY_SUBMERGE}
