--- a/For_Power/macros/abilities.cfg
+++ b/For_Power/macros/abilities.cfg
@@ -5,8 +5,8 @@
     value={VALUE}
     id=healing {VALUE}
     affect_allies=yes
-    name= _ "heals +{VALUE}"
-    female_name= _ "female^heals {VALUE}"
+    name= _ "heals +"+"{VALUE}"
+    female_name= _ "female^heals +"+"{VALUE}"
     description= _ "This unit combines herbal remedies with magic to heal units more quickly than is normally possible on the battlefield.
 
 A unit cared for by this healer may heal up to {VALUE} HP per turn, or stop poison from taking effect for that turn.
@@ -23,8 +23,8 @@ A poisoned unit cannot be cured of its poison by a healer, and must seek the car
     [regenerate]
         value={VALUE}
         id=regenerates {VALUE}
-        name= _ "regenerates ({VALUE})"
-        female_name= _ "female^regenerates ({VALUE})"
+        name= _ "regenerates "+"({VALUE})"
+        female_name= _ "female^regenerates "+"({VALUE})"
         description= _ "The unit will heal itself {VALUE} HP per turn. If it is poisoned, it will remove the poison instead of healing."
         affect_self=yes
         poison=cured
@@ -36,8 +36,8 @@ A poisoned unit cannot be cured of its poison by a healer, and must seek the car
     id=despair
     value=-{INTENSITY}
     cumulative=no
-    name= _ "despair ({INTENSITY})"
-    female_name= _ "female^despair ({INTENSITY})"
+    name= _ "despair "+"({INTENSITY})"
+    female_name= _ "female^despair "+"({INTENSITY})"
     description= _ "This unit's presence is so darkly ominous that all adjacent enemies struggle with despair, dealing {INTENSITY}% less damage."
     affect_self=no
     affect_allies=no
@@ -63,8 +63,8 @@ A poisoned unit cannot be cured of its poison by a healer, and must seek the car
     sub={INTENSITY}
 	  max_value=80
     cumulative=yes
-    name= _ "conviction ({INTENSITY})"
-    female_name= _ "female^conviction ({INTENSITY})"
+    name= _ "conviction "+"({INTENSITY})"
+    female_name= _ "female^conviction "+"({INTENSITY})"
     description= _ "This unit's presence is so darkly ominous that all adjacent enemies struggle with the guilt of their evil deeds, reducing their resistances by {INTENSITY}%."
     affect_self=no
     affect_allies=no
@@ -81,8 +81,8 @@ A poisoned unit cannot be cured of its poison by a healer, and must seek the car
     add={INTENSITY}
     cumulative=yes
     max_value=60
-    name= _ "shield ({INTENSITY})"
-    female_name= _ "female^shield ({INTENSITY})"
+    name= _ "shield "+"({INTENSITY})"
+    female_name= _ "female^shield "+"({INTENSITY})"
     description= _ "This unit's presence is so glorious that all adjacent allies are hounoured and inspired by them, increasing their resistances by {INTENSITY}%, up to a maximum of 60%."
     affect_self=no
     affect_allies=yes
@@ -299,8 +299,8 @@ Adjacent own outlaw units of lower level will do more damage in battle. When a u
     add={INTENSITY}
     cumulative=yes
     max_value=60
-    name= _ "scare ({INTENSITY})"
-    female_name= _ "female^scare ({INTENSITY})"
+    name= _ "scare "+"({INTENSITY})"
+    female_name= _ "female^scare "+"({INTENSITY})"
     description= _ "This unit's presence is so horrible that all adjacent bandits are hounoured and inspired by them, increasing their resistances by {INTENSITY}%, up to a maximum of 60%."
     affect_self=no
     affect_allies=yes
