--- a/For_Power/scenarios/01_Defend_the_village.cfg
+++ b/For_Power/scenarios/01_Defend_the_village.cfg
@@ -184,7 +184,7 @@
 	  [/filter]
 	  [message]
 			speaker=orc1
-			message=_"He thougth I was weak but he is the one who is dead. Orcs, under my banner!"
+			message=_"He thought I was weak but he is the one who is dead. Orcs, under my banner!"
 		[/message]
 		[if]
 		  [have_unit]
