--- a/For_Power/scenarios/16b_Preserving.cfg
+++ b/For_Power/scenarios/16b_Preserving.cfg
@@ -105,7 +105,7 @@
 		[/message]
 		[message]
 		  speaker=Haldar
-		  message=_"I will check it... Yes they are right."
+		  message=_"I will check it ... Yes, they are right."
 		[/message]
 		[message]
 		  speaker=Clare
