--- a/For_Power/units/Clare_Lich.cfg
+++ b/For_Power/units/Clare_Lich.cfg
@@ -33,6 +33,18 @@
     blade=100
     pierce=80
   [/resistance]
+  [portrait]
+    size=400
+    side="left"
+    mirror="false"
+    image="portraits/Clare.png"
+  [/portrait]
+  [portrait]
+    size=400
+    side="right"
+    mirror="true"
+    image="portraits/Clare.png"
+  [/portrait]
   [abilities]
     {ABILITY_TELEPORT}
     {ABILITY_SUBMERGE}
