wescamp.py: Update from add-on server

--- a/For_Power/scenarios/07_Searching_The_Mage.cfg
+++ b/For_Power/scenarios/07_Searching_The_Mage.cfg
@@ -154,7 +154,11 @@
 		[/message]
 		[message]
 		  speaker=Tinry
-		  message=_"I said nothing."
+		  message=_"I didn't say anything, miss."
+		[/message]
+    [message]
+		  speaker=Clare
+		  message=_"Good."
 		[/message]
 		[message]
 		  speaker=Tinry
@@ -250,6 +254,14 @@
 		[message]
 		  speaker=Merissa
 		  message=_"So, the mage. There's a shortcut, if you want it. Go down this road, straight to the mountain."
+		[/message]
+    [message]
+		  speaker=Merissa
+		  message={ASIDE _"And hey, Tinry, stop staring at her. I know she's pretty but she seems to be embarrassed by it despite she said nothing."}
+		[/message]
+    [message]
+		  speaker=Tinry
+		  message={ASIDE _"Heh? ... Alright, alright!"}
 		[/message]
 		[lift_fog]
 		  [filter_side]
