--- a/For_Power/scenarios2/01_Return_of_troubles.cfg
+++ b/For_Power/scenarios2/01_Return_of_troubles.cfg
@@ -7,6 +7,8 @@
 	map_data="{~add-ons/For_Power/maps/01_Return_of_troubles.map}"
 	snapshot=no
 	turns=25
+  carryover_percentage=40
+  carryover_add=true
 	{INTRO_AND_SCENARIO_MUSIC wanderer.ogg elf-land.ogg}
 	{EXTRA_SCENARIO_MUSIC battle.ogg}
 	{EXTRA_SCENARIO_MUSIC knolls.ogg}
@@ -174,6 +176,26 @@
 		  variable=soldiers_store
 		  kill=yes
 		[/store_unit]
+    [get_global_variable]
+      namespace=james_the_invisible_for_power
+      from_global=chapter_1_path
+      to_local=chapter1_path
+    [/get_global_variable]
+    [if]
+      [variable]
+        name=chapter1_path
+        not_equals=1
+      [/variable]
+      [or]
+        [variable]
+          name=chapter1_path
+          not_equals=2
+        [/variable]
+      [/or]
+      [then]
+        {VARIABLE chapter1_path 1}
+      [/then]
+    [/if]
   [/event]
   
   [event]
