--- a/For_Power/scenarios3/05_Dealing_with_trolls.cfg
+++ b/For_Power/scenarios3/05_Dealing_with_trolls.cfg
@@ -268,6 +268,7 @@
     {LOYAL_TROLL}
     {LOYAL_TROLL}
     {LOYAL_TROLL}
+    {VARIABLE trolls_spared yes}
     [endlevel]
 		  result=victory
 		  bonus=yes
@@ -300,6 +301,7 @@
     {MOVE_UNIT id=Clare $trolls_leader_store.x $trolls_leader_store.y}
     {LOOT 75 1}
     {CLEAR_VARIABLE trolls_leader_store}
+    {VARIABLE trolls_spared no}
     [endlevel]
 		  result=victory
 		  bonus=yes
@@ -317,6 +319,12 @@
       speaker=Clare
       message=_"Yes, of course."
     [/message]
+    # save the choice for later chapters
+    [set_global_variable]
+      namespace=james_the_invisible_for_power
+      from_local=trolls_spared
+      to_global=chapter_3_trolls
+    [/set_global_variable]
   [/event]
   
   [event]
