--- a/For_Power/scenarios/01_Defend_the_village.cfg
+++ b/For_Power/scenarios/01_Defend_the_village.cfg
@@ -7,6 +7,8 @@
 	map_data="{~add-ons/For_Power/maps/The_Village.map}"
 	snapshot=no
 	turns=25
+  carryover_percentage=40
+  carryover_add=true
 	{INTRO_AND_SCENARIO_MUSIC wanderer.ogg loyalists.ogg}
 	{EXTRA_SCENARIO_MUSIC battle.ogg}
 	{EXTRA_SCENARIO_MUSIC breaking_the_chains.ogg}
