--- a/For_Power/scenarios/06_On_The_Road.cfg
+++ b/For_Power/scenarios/06_On_The_Road.cfg
@@ -176,7 +176,7 @@
 		[/message]
 		[message]
 		  speaker=Tinry
-		  message=_"Thanks, lady, whoever you are."
+		  message={WHISPER _"Who is that woman? She looks pretty nice and her clothes seem to be expensive. Well, I like her but why would she bother with those like us?"}+" "+_"Thanks, lady, whoever you are."
 		[/message]
 		[message]
 		  speaker=narrator
@@ -269,6 +269,10 @@
 		[message]
 		  speaker=Tinry
 		  message=_"All-righty then. Get your packs ready, everyone, we’re leaving!"
+		[/message]
+    [message]
+		  speaker=Tinry
+		  message={WHISPER _"Well, even though she's going to travel with us she seems to not like it at all. I'd like to know what is on her mind. Hm, maybe I should less think about it and more enjoy her presence. Who knows how long for she'll be around here."}
 		[/message]
 		{MODIFY_UNIT id=Tinry canrecruit no}
 		{MAKE_HERO Tinry}
