--- a/For_Power/scenarios/10a_An_Exercise.cfg
+++ b/For_Power/scenarios/10a_An_Exercise.cfg
@@ -7,6 +7,8 @@
 	next_scenario=12_An_Orchish_Town
 	snapshot=no
 	turns=20
+  carryover_percentage=40
+  carryover_add=true
 	{SCENARIO_MUSIC northerners.ogg}
 	{STORY10a}
 	{DEFAULT_SCHEDULE}
