--- a/For_Power/scenarios/18b_The_Truth.cfg
+++ b/For_Power/scenarios/18b_The_Truth.cfg
@@ -7,6 +7,8 @@
 	next_scenario=19b_The_Necromancer
 	snapshot=no
 	turns=25
+  carryover_percentage=40
+  carryover_add=true
 	{STORY18b}
 	{DEFAULT_SCHEDULE}
 	{SCENARIO_MUSIC loyalists.ogg}
