--- a/For_Power/scenarios/Epilogue_b.cfg
+++ b/For_Power/scenarios/Epilogue_b.cfg
@@ -73,6 +73,7 @@
       variable=army_store
     [/store_unit]
     {FOREACH army_store i}
+    {VARIABLE army_store[$i].variables.from_chapter_1 yes}
     [set_variables]
       name=transfer_store.unit[$transfer_store.unit.length]
       to_variable=army_store[$i]
