--- a/For_Power/scenarios2/07_West_Front.cfg
+++ b/For_Power/scenarios2/07_West_Front.cfg
@@ -17,6 +17,8 @@
 	map_data="{~add-ons/For_Power/maps/07_West_Front.map}"
 	snapshot=no
 	turns=30
+  carryover_percentage=40
+  carryover_add=true
   {SCENARIO_MUSIC siege_of_laurelmor.ogg}
   {EXTRA_SCENARIO_MUSIC battle-epic.ogg}
   {EXTRA_SCENARIO_MUSIC the_city_falls.ogg}
