--- a/For_Power/scenarios2/10_Undeads_in_front_of_Dwarven_Doors.cfg
+++ b/For_Power/scenarios2/10_Undeads_in_front_of_Dwarven_Doors.cfg
@@ -293,10 +293,24 @@
     [filter_second]
       type=Dream_Walking_Corpse
     [/filter_second]
-    [message]
-      speaker=Clare
-      message=_"Wow. These undead are very good even if I have no experiences with necromancy."
-    [/message]
+    [if]
+      [variable]
+        name=chapter1_path
+        equals=1
+      [/variable]
+      [then]
+       [message]
+         speaker=Clare
+         message=_"Wow. These undead are very good even if I have no experiences with necromancy."
+        [/message]
+      [/then]
+      [else]
+        [message]
+         speaker=Clare
+         message=_"Wow. These undead are much more stronger than the ones what I summoned a few years ago even though I had no opportunity to practise it."
+        [/message]
+      [/else]
+    [/if]
   [/event]
   
   [event]
