--- a/For_Power/scenarios2/12_Escape_from_prison.cfg
+++ b/For_Power/scenarios2/12_Escape_from_prison.cfg
@@ -147,11 +147,11 @@
     [/message]
     [message]
       speaker=Merissa
-      message=_"So we wait in prison to be executed and you are reading a book? And about such a thing?"
+      message=_"So we wait in prison to be executed and you're reading a book? And about such a thing?"
     [/message]
     [message]
       speaker=Clare
-      message=_"I am sorry. I do not want us to be executed, but I have no idea what to do."
+      message=_"I am sorry. I do not want us to be executed, but I have no idea what else I shall do."
     [/message]
     [message]
       speaker=Merissa
@@ -177,10 +177,24 @@
       speaker=Clare
       message=_"I worry that you are right. Ok, I will do this but I need some time to learn it."
     [/message]
-    [message]
-      speaker=narrator
-      message=_"After three weeks of practice Clare was able to raise some human corpses."
-    [/message]
+    [if]
+      [variable]
+        name=chapter1_path
+        equals=1
+      [/variable]
+      [then]
+       [message]
+         speaker=narrator
+         message=_"After three weeks of practice Clare was able to rise some human corpses. They were not particularly strong but they still could be of some use in this very situation."
+        [/message]
+      [/then]
+      [else]
+        [message]
+         speaker=narrator
+         message=_"Clare was not glad at all that she had to use this horrible art of rising bodies of the dead once again but she was very aware that she could not handle this bad situation with only help of her friends. But she soon realised that she forgot the exact procedure so she had to learn it again from the book. Finally after three weeks, two corpses was rising from the ground inside their cell."
+        [/message]
+      [/else]
+    [/if]
     {LOYAL_UNDEAD_UNIT 1 (Walking Corpse) 8 1}
     {LOYAL_UNDEAD_UNIT 1 (Walking Corpse) 10 1}
     [message]
