--- a/For_Power/scenarios3/01_End_of_peace.cfg
+++ b/For_Power/scenarios3/01_End_of_peace.cfg
@@ -7,6 +7,8 @@
 	map_data="{~add-ons/For_Power/maps/01_End_of_peace.map}"
 	snapshot=no
 	turns=15
+  carryover_percentage=40
+  carryover_add=true
   {SCENARIO_MUSIC silvan_sanctuary.ogg}
 	{INTRO}
 	{DEFAULT_SCHEDULE}
