--- a/For_Power/scenarios3/04_Orcs_region.cfg
+++ b/For_Power/scenarios3/04_Orcs_region.cfg
@@ -7,6 +7,8 @@
 	map_data="{~add-ons/For_Power/maps/04_Orcs_region.map}"
 	snapshot=no
 	turns=25
+  carryover_percentage=40
+  carryover_add=true
   {SCENARIO_MUSIC northern_mountains.ogg}
   {EXTRA_SCENARIO_MUSIC battle-epic.ogg}
   {EXTRA_SCENARIO_MUSIC northerners.ogg}
