--- a/For_Power/scenarios3/09_To_Morbivords_Castle.cfg
+++ b/For_Power/scenarios3/09_To_Morbivords_Castle.cfg
@@ -7,6 +7,8 @@
 	map_data="{~add-ons/For_Power/maps/09_To_Morbivords_Castle.map}"
 	snapshot=no
 	turns=18
+  carryover_percentage=40
+  carryover_add=true
   {SCENARIO_MUSIC loyalists.ogg}
   {EXTRA_SCENARIO_MUSIC battle.ogg}
   {EXTRA_SCENARIO_MUSIC frantic.ogg}
