--- a/For_Power/scenarios3/11_On_the_way_back.cfg
+++ b/For_Power/scenarios3/11_On_the_way_back.cfg
@@ -202,7 +202,7 @@
         [/message]
         [message]
           speaker=Clare
-          message=_"Very well. The wide green world is nicer without them."
+          message=_"Very well. The wide green world is much nicer without these brutes."
         [/message]
         [message]
           speaker=Amiwen
@@ -243,7 +243,7 @@
         [/message]
         [message]
           speaker=Lemyr
-          message=_"You are right. Ok, take here and let us go home."
+          message=_"You are right. Ok, take her and let us go home."
         [/message]
         [endlevel]
           result=victory
