--- a/For_Power/scenarios4/02_Bandits.cfg
+++ b/For_Power/scenarios4/02_Bandits.cfg
@@ -7,6 +7,8 @@
 	map_data="{~add-ons/For_Power/maps/02_Bandits.map}"
 	snapshot=no
 	turns=30
+  carryover_percentage=40
+  carryover_add=true
   {SCENARIO_MUSIC northerners.ogg}
   {EXTRA_SCENARIO_MUSIC battle.ogg}
   {EXTRA_SCENARIO_MUSIC legends_of_the_north.ogg}
