--- a/For_Power/scenarios4/03_The_Swamp.cfg
+++ b/For_Power/scenarios4/03_The_Swamp.cfg
@@ -7,6 +7,8 @@
 	map_data="{~add-ons/For_Power/maps/03_The_Swamp.map}"
 	snapshot=no
 	turns=25
+  carryover_percentage=40
+  carryover_add=true
   {SCENARIO_MUSIC the_deep_path.ogg}
   {EXTRA_SCENARIO_MUSIC transience.ogg}
   {EXTRA_SCENARIO_MUSIC battle.ogg}
