--- a/For_Power/scenarios4/06_The_Saurians.cfg
+++ b/For_Power/scenarios4/06_The_Saurians.cfg
@@ -7,6 +7,8 @@
 	map_data="{~add-ons/For_Power/maps/06_The_Saurians.map}"
 	snapshot=no
   turns=30
+  carryover_percentage=40
+  carryover_add=true
   {SCENARIO_MUSIC breaking_the_chains.ogg}
   {EXTRA_SCENARIO_MUSIC battle.ogg}
   {EXTRA_SCENARIO_MUSIC casualties_of_war.ogg}
