--- a/For_Power/scenarios4/07_Eastern_lands.cfg
+++ b/For_Power/scenarios4/07_Eastern_lands.cfg
@@ -7,6 +7,8 @@
 	map_data="{~add-ons/For_Power/maps/07_Eastern_lands.map}"
 	snapshot=no
   turns=30
+  carryover_percentage=40
+  carryover_add=true
   {SCENARIO_MUSIC battle.ogg}
   {EXTRA_SCENARIO_MUSIC frantic.ogg}
   {EXTRA_SCENARIO_MUSIC the_deep_path.ogg}
