--- a/For_Power/scenarios4/08_Eastern_lands2.cfg
+++ b/For_Power/scenarios4/08_Eastern_lands2.cfg
@@ -7,6 +7,8 @@
 	map_data="{~add-ons/For_Power/maps/08_Eastern_lands2.map}"
 	snapshot=no
   turns=30
+  carryover_percentage=40
+  carryover_add=true
   {SCENARIO_MUSIC vengeful.ogg}
   {EXTRA_SCENARIO_MUSIC frantic.ogg}
   {EXTRA_SCENARIO_MUSIC the_city_falls.ogg}
