--- a/For_Power/scenarios5/03_Besieged.cfg
+++ b/For_Power/scenarios5/03_Besieged.cfg
@@ -129,6 +129,7 @@
     [modify_unit]
       [filter]
         type=Royal Guard,Swordsman
+        side=3
       [/filter]
       max_moves=0
     [/modify_unit]
