--- a/For_Power/scenarios5/06_Entrance.cfg
+++ b/For_Power/scenarios5/06_Entrance.cfg
@@ -7,6 +7,8 @@
 	map_data="{~add-ons/For_Power/maps/06_Entrance.map}"
 	snapshot=no
 	turns=15
+  carryover_percentage=40
+  carryover_add=true
   {SCENARIO_MUSIC the_city_falls.ogg}
   {EXTRA_SCENARIO_MUSIC siege_of_laurelmor.ogg}
   {EXTRA_SCENARIO_MUSIC into_the_shadows.ogg}
