wescamp.py: Update from add-on server

--- a/For_Power/scenarios/04_Return.cfg
+++ b/For_Power/scenarios/04_Return.cfg
@@ -143,7 +143,7 @@
     name=_"Gridash"
 		canrecruit=yes
 
-		recruit=Orcish Grunt,Orcish Archer
+		recruit=Orcish Grunt,Orcish Archer,Wolf Rider
 
 		{FLAG_VARIANT ragged}
 		{GOLD 80 95 110}
