--- a/For_Power/scenarios/07_Searching_The_Mage.cfg
+++ b/For_Power/scenarios/07_Searching_The_Mage.cfg
@@ -123,7 +123,7 @@
 	  [objectives]
 	  	side=1
 	 		[objective]
-				description= _ "Find the mage's place"
+				description= _ "Find Haldar's place with Clare"
 				condition=win
 			[/objective]
 			{HOW_TO_LOSE2}
@@ -298,7 +298,7 @@
     name=moveto
     [filter]
       x=26
-      y=0-3
+      y=1-3
       id=Clare
     [/filter]
     [message]
