--- a/For_Power/scenarios/18b_The_Truth.cfg
+++ b/For_Power/scenarios/18b_The_Truth.cfg
@@ -60,7 +60,7 @@
     generate_name=yes
 		canrecruit=yes
 
-		recruit=Orcish Grunt,Orcish Archer
+		recruit=Orcish Grunt,Orcish Archer,Orcish Assassin
 
 		{FLAG_VARIANT ragged}
 		{GOLD 75 85 100}
@@ -78,7 +78,7 @@
     generate_name=yes
 		canrecruit=yes
 
-		recruit=Orcish Grunt,Orcish Archer
+		recruit=Orcish Grunt,Orcish Archer,Orcish Assassin
 
 		{FLAG_VARIANT ragged}
 		{GOLD 75 85 100}
